Archive2/4a/2d63704cfab3bd/output
main.cpp: In function 'int main()':
main.cpp:25:22: error: no matching function for call to 'BaseHandler::process(DerivedList&)'
     bh.process( list );
                      ^
main.cpp:25:22: note: candidate is:
main.cpp:16:10: note: void BaseHandler::process(BaseList)
     void process( BaseList list ) {
          ^
main.cpp:16:10: note:   no known conversion for argument 1 from 'DerivedList {aka std::vector<Derived>}' to 'BaseList {aka std::vector<Base>}'
