Archive2/4a/2d63704cfab3bd/main.cpp
#include <string>
#include <vector>

class Base {
public:
    std::string Name;
};
using BaseList = std::vector<Base>;

class Derived : Base {
};
using DerivedList = std::vector<Derived>;

class BaseHandler {
public:
    void process( BaseList list ) {
    }
};

int main() {
 
    DerivedList list;
 
    BaseHandler bh;
    bh.process( list );
     
}